--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,14 @@
-!!!
+!!!5
 html
   head
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/redmond/jquery-ui.css')
+    link(rel='stylesheet', href='/stylesheets/jquery.mobile-1.0.1.min.css')
+
     script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js')
     script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.js')
+    script(type='text/javascript', src='/javascripts/jquery.mobile-1.0.1.min.js')
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
     
   body!=body
