--- a/views/vote.jade
+++ b/views/vote.jade
@@ -23,7 +23,7 @@ div(id='toppage',data-role='page')
 
   p 都合のつく日付をタッチしてください<br/>
   
-  div(data-role="collapsible-set",data-theme="c",data-content-theme="d")#pnlScheduleList   
+  div(data-role="collapsible-set")#pnlScheduleList   
   
   <br/><br/>
   p 日程を追加する場合はこちら
