--- a/views/hp_scheduleList.jade
+++ b/views/hp_scheduleList.jade
@@ -11,21 +11,22 @@
     - for(var i = 0; i < sc.votes.length;i++){
     -  if(sc.votes[i].status == "◯"){ vcount += 1 }else if(sc.votes[i].status == "△"){ vcount += 0.5 }
     - }
-    span(style="padding:0.1em 0.5em 0.1em 0.5em;margin:0em 0em 0em 10em",).ui-li-has-count.ui-li-count.ui-btn-up-c.ui-btn-corner-all= vcount + "/" + sc.votes.length 
+    span(style="padding:0.1em 0.5em 0.1em 0.5em;margin:0em 0em 0em 5em",).ui-li-has-count.ui-li-count.ui-btn-up-c.ui-btn-corner-all= vcount + "/" + sc.votes.length 
    div
-    ul.voting
      each v in sc.votes
-      li(id= v._id,title=v.comment).voter
-       div.ui-grid-c
-        div.ui-block-a
+      table(id= v._id).voter
+       tr
+        td.a
          b= v.name
-        div.ui-block-b
+        td(align="center").b
          b= v.status
-        div.ui-block-c
-         a(href="#",data-role="button",onclick="voteChange('" + sc._id +"','" + v._id + "')") 変更
-        div.ui-block-d
-         a(href="#",data-role="button",onclick="voteDelete('" + sc._id +"','" + v._id + "')") 削除
-    
+        td(align="center",rowspan="2").c
+         a(href="#",data-role="button",data-mini="true",onclick="voteChange('" + sc._id +"','" + v._id + "')") 変更
+         a(href="#",data-role="button",data-mini="true",onclick="voteDelete('" + sc._id +"','" + v._id + "')") 削除
+       tr
+        td(colspan="2").d
+         span= v.comment
+     <br/>
     div.ui-grid-a
      div(align="left").ui-block-a
       input(type="button",onclick="scheduleDelete('" + sc._id +"')",value="日程を削除")
