--- a/views/vote.jade
+++ b/views/vote.jade
@@ -44,7 +44,7 @@ div(id='toppage',data-role='page')
    span(style="color:red")#msg 
   - }
 
- div(data-role="footer",class="ui-bar")
+ div(data-role="footer")
   div(data-role="controlgroup",data-type="horizontal")
    a(data-role="button", data-icon="check",onclick="moveMySchedule()") みんなに連絡する
  
