--- a/views/vote.jade
+++ b/views/vote.jade
@@ -23,7 +23,7 @@ div(id='toppage',data-role='page')
   p 名前を入力して都合のつく日に投票します。
    input#name(type='text',placeholder='苗字など、短くみんながわかる名前')
     
-  p 日程が不足している場合、追加できます。 
+  p 日程がない場合、追加できます(書式:yyyyMMdd)。 
   div#pnlScheduleAdd.form.ui-grid-a
    div.ui-block-a
     input#sDate(type='text', placeholder='yyyyMMdd',style="width:8em",maxlength="8")
